# VoxTerm

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  config_store.py  cyberpunk.tcss  diagnostics.py  flake.nix  install.sh  overlap-chunk-merge-slides.html  paths.py  pyproject.toml  requirements.txt  shell.nix  test_discovery_local.py  test_p2p_e2e.py  voxterm  voxterm.bat
.github/workflows/: test.yml
audio/: buffer.py  capture.py  lid.py  merger.py  platform.py  system_capture.py
audio/diarization/: __init__.py  campplus.py  (+7 more)
dev/: Dockerfile.test  requirements-dev.txt
diarization/: engine.py  export_onnx.py  ipc.py  lid.py  onnx_embedder.py  proxy.py  segmentation.py
dictation/: __main__.py  app.py  hotkey.py  indicator.py  injector.py  loop.py
docs/: cross-platform-plan.md  p2p-protocol-spec.md  p2p-ux-wip.md  party-mode-design.md  releasing.md  spatial-erasure-analysis.md
network/: audio_stream.py  clock.py  crypto.py  debug.py  discovery.py  party.py  peer.py  protocol.py  segments.py  session.py  test_harness.py  wordlist.py
party/: manager.py
spatial/: __init__.py  calibration.py  diarization.py  enhancement.py  frontend.py  identity.py  models.py  retention.py
speakers/: crypto.py  store.py
tests/: benchmark_agreement.py  benchmark_diarization.py  benchmark_results.json  conftest.py  test_agreement.py  test_audio_merger.py  test_cluster.py  test_config_store.py  test_crypto.py  test_diagnostics.py  test_diarization_accuracy.py  test_diarize_offline.py  test_discovery_local.py  test_engine_state.py  test_fbank.py  test_hallucination.py  test_ipc.py  test_onnx_embedder.py  test_p2p_audio_stream.py  test_p2p_clock.py  test_p2p_crypto.py  test_p2p_discovery.py  test_p2p_e2e.py  test_p2p_e2e_standalone.py  test_p2p_multi_peer.py  test_p2p_peer_lifecycle.py  test_p2p_protocol.py  test_p2p_segments.py  test_proxy.py  test_proxy_crash.py  test_proxy_threading.py  test_rover_merge.py  test_spatial_calibration.py  test_spatial_diarization.py  test_spatial_enhancement.py  test_spatial_frontend.py  test_spatial_models.py  test_spatial_retention.py  test_speaker_models.py  test_speaker_store.py  (+1 more)
transcriber/: agreement.py  engine.py
tui/: app.py  cyberpunk.tcss
widgets/: header.py  network_bar.py  room_invite.py  transcript.py
(+19 files in other folders)
