[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxterm"
dynamic = ["version"]
description = "Local, offline voice transcription TUI with speaker diarization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["transcription", "voice", "tui", "diarization", "speech-to-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "textual>=8.0.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "silero-vad>=5.1",
    "onnxruntime>=1.16.0",
    "scipy>=1.10.0",
    "zeroconf>=0.131.0",
    "cryptography>=42.0.0",
    # macOS: MLX-based transcription
    "mlx-whisper>=0.4.0; sys_platform == 'darwin'",
    "mlx-qwen3-asr>=0.1.0; sys_platform == 'darwin'",
    # macOS: dictation tray icon
    "rumps>=0.4.0; sys_platform == 'darwin'",
    # Linux: PyTorch-based transcription
    "qwen-asr>=0.0.6; sys_platform == 'linux'",
    "torch>=2.0.0; sys_platform == 'linux'",
    "faster-whisper>=1.0.0; sys_platform == 'linux'",
    # Linux: dictation tray icon
    "pystray>=0.19.0; sys_platform == 'linux'",
    "Pillow>=10.0.0; sys_platform == 'linux'",
    "python-xlib>=0.33; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
voxterm = "tui.app:main"

[tool.setuptools.dynamic]
version = {attr = "config.VERSION"}

[tool.setuptools.packages.find]
include = [
    "audio*",
    "dictation*",
    "network*",
    "scripts*",
    "tui*",
]

[tool.setuptools]
py-modules = ["config", "config_store", "diagnostics", "paths"]

[tool.setuptools.package-data]
tui = ["cyberpunk.tcss"]
audio = ["_macos_sck.swift", "_macos_aggregate.swift"]
